--- a/src/components/MovieCard/MovieCard.css
+++ b/src/components/MovieCard/MovieCard.css
@@ -1,7 +1,10 @@
 .card-item {
   background: #1a242f;
   cursor: pointer;
-  transition: all 0.3s; }
+  transition: all 0.3s;
+  min-height: 450px;
+  height: 100%;
+  margin: 10px; }
   .card-item:hover {
     transform: scale(1.1);
     transition: all 0.3s; }
