--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,3 +1,8 @@
-
+.loading {
+  display: flex;
+  justify-content: space-evenly;
+  padding: 40px 0;
+  color: #fff;
+  font-weight: 400; }
 
 /*# sourceMappingURL=Home.css.map */
